<resources>
    <string name="app_name">PostBud</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="how_cool_is_the_package_describe_it">Package Description</string>
    <string name="ordered_by_jane_doe">Ordered By</string>
    <string name="priority_1_2_or_3">Priority Index</string>
    <string name="current_status">Shipment Status</string>
    <string name="where_is_it_going">Destination</string>
    <string name="where_is_from">Origin</string>
    <string name="title_activity_add_parcel">New Parcel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="where_is_it_now">Current Location</string>
    <string name="add_parcel">Add parcel</string>

    <!-- Strings used for parcel/delivery statuses and priorities -->
    <string-array name="status_array">
        <item name="parcel_status_pending">PENDING</item>
        <item name="parcel_status_awaiting_pickup">AWAITING PICKUP</item>
        <item name="parcel_status_awaiting_payment">AWAITING PAYMENT</item>
        <item name="parcel_status_in_transit">IN TRANSIT</item>
        <item name="parcel_status_shipped">SHIPPED</item>
        <item name="parcel_status_in_canceled">CANCELLED</item>
    </string-array>

    <string name="parcel_priority_high">HIGH</string>
    <string name="parcel_priority_medium">MEDIUM</string>
    <string name="parcel_priority_low">LOW</string>

    <!-- Extra database parameters -->
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="right_arrow">right_arrow</string>
    <string name="destination">Destination</string>
    <string name="wpg">WPG</string>
    <string name="in_transit">In Transit</string>
    <string name="status">Status</string>
    <string name="cgy">CGY</string>
    <string name="from">From</string>
    <string name="lorem_ipsum">I\'ll have to stay for longer at work. So if I miss the meeting, FYI, I\'m going to start doing those parcel use cases that Daniel assigned to me and then start trying to implement that mockup in that I made, in XML.</string>
    <string name="high">High</string>

    <!-- Strings for Firebase fields -->
    <string name="firebase_navigation_administrators">administrators</string>
    <string name="firebase_navigation_document_id">documentId</string>
    <string name="firebase_navigation_current_location">currentLocation</string>
    <string name="firebase_navigation_origin">origin</string>
    <string name="firebase_navigation_destination">destination</string>
    <string name="firebase_navigation_ordered_by">orderedBy</string>
    <string name="firebase_navigation_description">description</string>
    <string name="firebase_navigation_status">status</string>
    <string name="firebase_navigation_priority">priority</string>
    <string name="firebase_navigation_handled_by">handledBy</string>
    <string name="firebase_navigation_weight">weight</string>
    <string name="firebase_navigation_date">date</string>
    <string name="firebase_navigation_parcels">parcels</string>
    <string name="firebase_navigation_employees">employees</string>
    <string name="firebase_navigation_uid">uid</string>
    <string name="firebase_navigation_email">email</string>
    <string name="firebase_navigation_parcel_id">parcelId</string>


    <!--    Andrey's part Strings-->
    <string name="track">Track</string>
    <string name="enter_your_tacking_number_here">Enter your tacking number here:</string>
    <string name="employee_login">Employee Login</string>
    <string name="sign_in">Sign in</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="password">Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="new_parcel">New Parcel</string>
    <string name="parcel_management">Parcel Management</string>
    <string name="log_out">Log out</string>
    <string name="status_employee">Status: employee</string>
    <string name="main_menu">Main Menu</string>
    <string name="recent_numbers">recent numbers</string>
    <string name="an_employee">An employee?</string>
    <string name="enter_your_tracking_number_here">Enter your tracking number here</string>
    <string name="your_recent_tracking_numbers">Your recent tracking numbers</string>
    <string name="title_activity_parcel_detail">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
