<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shiftdev.postbud.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addParcelActivity"
            app:destination="@id/addParcelActivity" />
        <action
            android:id="@+id/action_navigation_home_to_parcelListActivity2"
            app:destination="@id/parcelListActivity2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.shiftdev.postbud.ui.parcel_overview.ParcelOverviewFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_parcel_overview" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shiftdev.postbud.ui.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/addParcelActivity"
        android:name="com.shiftdev.postbud.AddParcelActivity"
        android:label="AddParcelActivity" />
    <activity
        android:id="@+id/parcelListActivity2"
        android:name="com.shiftdev.postbud.ParcelListActivity"
        android:label="ParcelListActivity" />
</navigation>